--- a/_posts/ctf/beefest-24/2024-11-11-beefest.md
+++ b/_posts/ctf/beefest-24/2024-11-11-beefest.md
@@ -7,7 +7,7 @@ tags: [ctf, beefest, pwn, crypto, reversing, web, forensics, misc, osint, hardwa
 toc: true
 ---
 
-# 🏆 Final Beefest 2024 – CTF Writeup
+#  Final Beefest 2024 – CTF Writeup
 
 > Writeup from the **Final Beefest 2024** CTF event.
 
