--- a/_posts/ctf/uiuctf-2025/2025-07-29-UIUCTF-2025.md
+++ b/_posts/ctf/uiuctf-2025/2025-07-29-UIUCTF-2025.md
@@ -179,6 +179,8 @@ print(long_to_bytes(pow(ct,d,N)).decode('latin-1'))
 - **Description**: I don't think you can predict my secret number from just its square root - can you prove me wrong?
 - **Solution Steps**:
 
+idk what's goin on here
+
 ```python
 from random import randint
 from decimal import Decimal, getcontext
