--- a/_posts/ctf/uiuctf-2025/2025-07-29-UIUCTF-2025.md
+++ b/_posts/ctf/uiuctf-2025/2025-07-29-UIUCTF-2025.md
@@ -234,21 +234,199 @@ for i in tqdm(range(99999,999999)):
 pivot to "quantum". They mandated we "quantumfy" our tech
 stack. Please review our latest authentication protocol.
 `ncat --ssl qas.chal.uiuc.tf 1337`
-
+- **Attachments**: [Handout.tar.gz](assets/files/handout.tar.gz)
 - **Solution Steps**:
 
+```c
+#include <stdio.h>
+#include <stdlib.h>
+#include <string.h>
+#include <time.h>
 
+// Quantum-grade type definitions for maximum security
+typedef int not_int_small;
+typedef short int_small;
+typedef int not_int_big;
+typedef not_int_small int_big;
+typedef unsigned char quantum_byte;
+typedef quantum_byte* quantum_ptr;
+
+// Advanced authentication structures
+typedef struct {
+    not_int_big val;
+} PASSWORD_QUANTUM;
+
+typedef struct {
+    int_small val;
+    quantum_byte padding[2];
+    quantum_byte checksum;
+    quantum_byte reserved;
+} INPUT_QUANTUM;
+
+// Memory-aligned structure for optimal quantum processing
+struct __attribute__((packed)) quantum_data_s {
+    INPUT_QUANTUM input;
+    PASSWORD_QUANTUM password;
+    quantum_byte entropy_pool[8];
+    quantum_byte quantum_state[16];
+};
+
+typedef struct quantum_data_s quantum_data_t;
+
+// Quantum random number generator (patent pending)
+static inline quantum_byte generate_quantum_entropy() {
+    static quantum_byte seed = 0x42;
+    seed = ((seed << 3) ^ (seed >> 5)) + 0x7f;
+    return seed;
+}
+
+// Initialize quantum security subsystem
+void init_quantum_security(quantum_data_t* qdata) {
+    for (int i = 0; i < 8; i++) {
+        qdata->entropy_pool[i] = generate_quantum_entropy();
+    }
+
+    // Initialize quantum state with pseudo-random values
+    for (int i = 0; i < 16; i++) {
+        qdata->quantum_state[i] = (quantum_byte)(i * 0x11 + 0x33);
+    }
+
+    qdata->input.padding[0] = 0;
+    qdata->input.padding[1] = 0;
+}
+
+// Quantum hash function (revolutionary technology)
+not_int_big quantum_hash(INPUT_QUANTUM input, quantum_byte* entropy) {
+    int_small input_val = input.val;
+    not_int_big hash = input_val;
+
+    // Apply quantum transformation matrix
+    hash ^= (entropy[0] << 8) | entropy[1];
+    hash ^= (entropy[2] << 4) | (entropy[3] >> 4);
+    hash += (entropy[4] * entropy[5]) & 0xff;
+    hash ^= entropy[6] ^ entropy[7];
+    hash |= 0xeee;
+    hash ^= input.padding[0] << 8 | input.padding[1];
+
+    return hash;
+}
+
+// Decrypt the victory condition
+void access_granted() {
+    printf("Quantum authentication successful!\n");
+    printf("Accessing secured vault...\n");
+
+    FILE *fp = fopen("flag.txt", "r");
+    if (fp == NULL) {
+        printf("Error: Quantum vault is offline\n");
+        printf("Please contact the quantum administrator.\n");
+        return;
+    }
+
+    char flag[100];
+    if (fgets(flag, sizeof(flag), fp) != NULL) {
+        printf("CLASSIFIED FLAG: %s\n", flag);
+    } else {
+        printf("Error: Quantum decryption failed\n");
+        printf("Please contact the quantum administrator.\n");
+    }
+    fclose(fp);
+}
+
+int main() {
+    quantum_data_t qdata;
+
+    setvbuf(stdout, NULL, _IONBF, 0);
+    setvbuf(stdin, NULL, _IONBF, 0);
+    setvbuf(stderr, NULL, _IONBF, 0);
+
+    // Initialize quantum security subsystem
+    init_quantum_security(&qdata);
+
+    // Set quantum password (TODO: implement proper quantum key derivation)
+    qdata.password.val = 0x555;
+
+    printf("=== QUANTUM AUTHENTICATION SYSTEM v2.7.3 ===\n");
+    printf("Initializing quantum security protocols...\n");
+
+    // Simulate quantum initialization delay
+    for (volatile int i = 0; i < 100000; i++) { /* quantum processing */ }
+
+    printf("Quantum entropy generated. System ready.\n");
+    printf("Please enter your quantum authentication code: ");
+
+    // Read user input
+    if (scanf("%d", (int*)&qdata.input.val) != 1) {
+        printf("Invalid quantum input format!\n");
+        return 1;
+    }
+
+    // Calculate input checksum for integrity
+    qdata.input.checksum = (quantum_byte)(qdata.input.val & 0xff);
+
+    // Apply quantum hash transformation
+    not_int_big hashed_input = quantum_hash(qdata.input, qdata.entropy_pool);
+
+    printf("Quantum hash computed: 0x%x\n", hashed_input);
+
+    // Verify quantum authentication
+    if (hashed_input == qdata.password.val) {
+        access_granted();
+    } else {
+        printf("Quantum authentication failed!\n");
+        printf("Access denied. Incident logged.\n");
+    }
+
+    return 0;
+}
+```
+
+
+```python
+from pwn import *
+
+context.log_level = 'debug'
+
+p = process('./chal')
+import struct
+
+target = 0x555
+
+def gen_entropy():
+    seed = 0x42
+    pool = []
+    for _ in range(8):
+        seed = ((seed << 3) ^ (seed >> 5)) + 0x7f
+        seed &= 0xff
+        pool.append(seed)
+    return pool
+
+entropy = gen_entropy()
+
+
+for val in range(0x10000):
+    for pad0 in range(0x100):
+        for pad1 in range(0x100):
+            hash = val
+            hash ^= (entropy[0] << 8) | entropy[1]
+            hash ^= (entropy[2] << 4) | (entropy[3] >> 4)
+            hash += (entropy[4] * entropy[5]) & 0xff
+            hash ^= entropy[6] ^ entropy[7]
+            hash |= 0xeee
+            hash ^= (pad0 << 8) | pad1
+
+            if hash != target:
+                continue
+            full_input = struct.unpack("<i", struct.pack("<HBB", val, pad0, pad1))[0]
+            print(f"FOUND! input = {val}, pad0 = {pad0}, pad1 = {pad1}, as int: {full_input}")
+            p.sendline(str(full_input))
+            p.interactive()
+```
 
 - **Flag**:
 
 ---
 
-### 🔹 Challenge: [Challenge Name Pwn 2] (XX pts)
-- **Description**:
-- **Solution Steps**:
-- **Flag**:
-
----
 
 ## 🧬 Reversing
 
@@ -395,13 +573,6 @@ sl(recovered_inputs)
 
 ---
 
-### 🔹 Challenge: [Challenge Name Reversing 2] (XX pts)
-- **Description**:
-- **Solution Steps**:
-- **Flag**:
-
----
-
 
 ## 🌍 OSINT
 
@@ -417,6 +588,8 @@ This is the introduction to an OSINT suite. While all other OSINT challenges can
 - **Description**: This picture was taken in a park. Find the name of the park.
 The flag is the park’s name it appears on Google Maps. For example, if you think the flag is in Central Park, submit uiuctf{Central Park}.
 - **Solution Steps**:
+
+<p align="left"><img src="assets/img/park.jpg" width="250"  height="550"></p>
 - **Flag**: 
 
 ---
