--- a/_posts/ctf/uiuctf-2025/2025-07-29-UIUCTF-2025.md
+++ b/_posts/ctf/uiuctf-2025/2025-07-29-UIUCTF-2025.md
@@ -233,7 +233,7 @@ for i in tqdm(range(99999,999999)):
 pivot to "quantum". They mandated we "quantumfy" our tech
 stack. Please review our latest authentication protocol.
 `ncat --ssl qas.chal.uiuc.tf 1337`
-- **Attachments**: [Handout.tar.gz](assets/files/handout.tar.gz)
+- **Attachments**: [Handout.tar.gz](/assets/files/handout.tar.gz)
 - **Solution Steps**:
 
 ```c
@@ -588,7 +588,7 @@ This is the introduction to an OSINT suite. While all other OSINT challenges can
 The flag is the park’s name it appears on Google Maps. For example, if you think the flag is in Central Park, submit uiuctf{Central Park}.
 - **Solution Steps**:
 
-<p align="left"><img src="assets/img/park.jpg" width="250"  height="550"></p>
+<p align="left"><img src="/assets/img/park.jpg" width="250"  height="550"></p>
 - **Flag**: 
 
 ---
