--- a/_posts/ctf/2025-07-23-ctf.md
+++ b/_posts/ctf/2025-07-23-ctf.md
@@ -3,7 +3,7 @@ layout: post
 title: "Getting Started with Capture The Flag (CTF) in Cybersecurity"
 date: 2022-07-23 14:00:00 +0700
 categories: ctf
-tags: [ctf, cybersecurity, hacking, beginner]
+tags: [ctf, ctftime, cybersecurity, hacking, beginner]
 comments: true
 toc: true
 ---
